Fix numerous issues w/ change in code system URI's, date representation and RelatedArtifact.reference entries
Had to disable fhirtest.uhn.ca tests as the server no longer responds

--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,12 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pbr = "*"
 
 [packages]
 python-dateutil = "*"
-rdflib = ">=4.2.2"
+rdflib = "~=5.0"
 rdflib-jsonld = "*"
-jsonasobj = ">=1.1.1"
+jsonasobj = ">=1.2.1"
 dirlistproc = ">=1.4.5"
 isodate = "*"
-
-[requires]
-python_version = "3.7"
