--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,9 +10,4 @@
 # `Pipfile.lock` and then regenerate `requirements*.txt`.
 ################################################################################
 
-dirlistproc>=1.4.5
-isodate
-jsonasobj>=1.2.1
-python-dateutil
-rdflib-jsonld
-rdflib~=5.0
+pbr
