--- a/setup.cfg
+++ b/setup.cfg
@@ -1,22 +1,24 @@
 [metadata]
 name = fhirtordf
-packages=['tests', 'scripts', 'fhirtordf', 'fhirtordf.fhir', 'fhirtordf.loaders', 'fhirtordf.rdfsupport'],
-url='https://github.com/BD2KOnFHIR/fhirtordf',
-license='Apache 2.0',
-author='Harold Solbrig',
-author_email='solbrig.harold@mayo.edu',
-description='FHIR JSON to RDF Conversion Tool',
-long_description='Convert JSON representatin of FHIR resources into RDF',
-install_requires=requires,
-scripts=['scripts/fhirtordf'],
+url = https://github.com/BD2KOnFHIR/fhirtordf
+license = CC0 1.0 Universal
+author = Harold Solbrig
+author_email = solbrig@jhu.edu
+summary = FHIR JSON to RDF Conversion Tool
+description = Convert JSON representatin of FHIR resources into RDF
 classifiers=[
-    'Development Status :: 3 - Alpha',
-    'Environment :: Console',
-    'Intended Audience :: Healthcare Industry',
-    'License :: OSI Approved :: Apache Software License',
-    'Topic :: Database',
-    'Programming Language :: Python :: 3'
+    Development Status :: 4 - Beta
+    Environment :: Console
+    Intended Audience :: Healthcare Industry
+    Intended Audiences :: Science/Research
+    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
 
+keywords =
+    FHIR
+    rdf
 
 [files]
 packages =
@@ -24,5 +26,5 @@ packages =
 
 [entry_points]
 console_scripts =
-    fhirtordf = fhirtordf.fhirtordf:fhirtordf
+    fhirtordf = fhirtordf.fhirtordf:main
 
