--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ classifiers=[
     Development Status :: 4 - Beta
     Environment :: Console
     Intended Audience :: Healthcare Industry
-    Intended Audiences :: Science/Research
+    Intended Audience :: Science/Research
     License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.7
