--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author = Harold Solbrig
 author_email = solbrig@jhu.edu
 summary = FHIR JSON to RDF Conversion Tool
 description = Convert JSON representatin of FHIR resources into RDF
-classifiers=[
+classifiers=
     Development Status :: 4 - Beta
     Environment :: Console
     Intended Audience :: Healthcare Industry
